# PocketStream

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
commands/: stream_rtsp_testpattern_esp32_720.ps1
h264/: CMakeLists.txt  KConfig.projbuild  esp_h264_enc_dec.c  idf_component.yml  video_pattern.c  video_pattern.h
main/: CMakeLists.txt  display.c  display.h  ethernet.c  ethernet.h  h264.c  h264.h  idf_component.yml  main.c  rtsp.c  rtsp.h  yuv_rgb.c  yuv_rgb.h
